--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>Spotify</title>
+</head>
 
+<body>
+    <nav>
+        <div class="nav-items">
+            <form class="" data-value="all">
+                <br><i class="fa fa-search"></i><br>
+                <input type="text" placeholder="What do you want to listen to?">
+            </form>
+        </div>
+    </nav>
+    <div class="sidebar">
+        <div id="logo">
+            <img src="logo.png" alt="logo">
+                <span style="font-style: italic;">Spotify</span>
+        </div>
+
+        <div class="sidebar-list-items">
+            <div data-link="home-page" id="home" class="active">
+                <i class="fa-solid fa-house"></i>
+                <p>Home</p>
+            </div>
+            <div data-link="search-page" id="search">
+                <i class="fa fa-search"></i>
+                <p>Search</p>
+            </div>
+            <div data-link="playlist-page" id="playlist">
+                <i class="fa-solid fa-music"></i>
+                <p>My Playlist</p>
+            </div>
+        </div>
+        <div class="next-in-queue">
+
+        </div>
+    </div>
+    <main class="custom-scroll">
+        <div class="div-page" id="home-page">
+            <section id="topTracks">
+                <h1 class="section-title">Top Tracks</h1>
+                <div class="topTracks-list custom-scroll">
+                    <div class="load"></div>
+
+                </div>
+            </section>
+            <section id="topArtists">
+                <h1 class="section-title">Top Artist</h1>
+                <div class="topArtists-list custom-scroll">
+                    <div class="load"></div>
+
+                </div>
+
+            </section>
+            <section id="topPlaylist">
+                <h1 class="section-title"></h1>
+                <div class="topPlaylist-list custom-scroll">
+                    <div class="load"></div>
+
+                </div>
+
+            </section>
+        </div>
+        <div class="hide-page div-page" id="search-page">
+            <div class="search-result">
+                <h1></h1>
+                <div class="search-results-container custom-scroll">
+                    <p class="noResult"></p>
+                </div>
+                <h1></h1>
+                <div class="recentlyPlayed-container custom-scroll">
+                    <p class="noRecent"></p>
+                </div>
+            </div>
+        </div>
+        <div class="hide-page div-page" id="playlist-page">
+            <h1></h1>
+            <div class="favorites-container"></div>
+        </div>
+    </main>
+    <div class="audio-player">
+        <div class="music-info">
+            <img src="./images/default_pic.png" alt="">
+            <div class="music-text">
+                <p class="track-text"></p>
+                <p class="album-text"></p>
+            </div>
+        </div>
+        <div class="audio-controls">
+            <i class="material-icons">shuffle</i>
+            <i id="audio-previous-song" class="fa-solid fa-backward-step"></i>
+            <i data-action="play" id="audio-play" class="fa-regular fa-circle-play"></i>
+            <i data-action="pause" id="audio-pause" class="fa-regular fa-circle-pause hide-audio-control"></i>
+            <i id="audio-next-song" class="fa-solid fa-forward-step"></i>
+            <i class="material-symbols-outlined">
+                forward_10
+            </i>
+        </div>
+        <div id="audio-player-container">
+            <audio preload="metadata" id="audio-player" src="">
+            </audio>
+            <div class="seekable">
+                <span id="audio-duration-start">00 : 00</span>
+                <input min="0" max="100" value="0" type="range" id="audio-seekable-slider">
+                <span id="audio-duration-end">00 : 00</span>
+            </div>
+            <div class="volume-slider">
+                <i class="fa-solid fa-volume-low"></i>
+                <input min="0" max="100" value="100" type="range" id="audio-volume-slider">
+            </div>
+        </div>
+        <div class="songs-queue">
+            <div class="songs-queue-toggler">
+                <p>Queue</p>
+                <div class="options">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-trash"></i>
+                </div>
+            </div>
+            <p class="currently-playing">Currently playing</p>
+            <div class="currently-playing-container "></div>
+            <p class="next-playing">Next</p>
+            <div class="next-playing-container"></div>
+        </div>
+    </div>
+    <script defer src="./index.js"></script>
+</body>
+</html>
